--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -15,11 +15,11 @@ jobs:
             - name: Check out the repository
               uses: actions/checkout@v2
 
-            - name: Set up JDK 11
-              uses: actions/setup-java@v2
+            - name: Set up JDK 21
+              uses: actions/setup-java@v4
               with:
-                    java-version: "11"
-                    distribution: "adopt"
+                    java-version: "21"
+                    distribution: "temurin"
             - name: Build with maven 
               run: mvn clean install
 
