--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -10,6 +10,9 @@ on:
 jobs: 
     build:
         runs-on: ubuntu-latest
+        defaults:
+            run:
+                working-directory: Backend
 
         steps:
             - name: Check out the repository
@@ -43,4 +46,3 @@ jobs:
 
         
 
-                
